@@ -530,6 +530,7 @@ Sha256PasswordPlugin.3=Unsupported character encoding ''{0}'' for ''passwordChar
 
 SocketConnection.0=No name specified for socket factory
 SocketConnection.1=Could not create socket factory '
+SocketConnection.2=Socket is closed
 
 SocketMetadata.0=Using 'host' value of ''{0}'' to determine locality of connection
 SocketMetadata.1=Locally connected - HostAddress({0}).equals(whereIconnectedTo({1})
